; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c_gsignal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c_gsignal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pgrp = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gsignal(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.pgrp*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %18

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = call %struct.pgrp* @pgfind(i32 %9)
  store %struct.pgrp* %10, %struct.pgrp** %5, align 8
  %11 = icmp ne %struct.pgrp* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %8
  %13 = load %struct.pgrp*, %struct.pgrp** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @pgsignal(%struct.pgrp* %13, i32 %14, i32 0)
  %16 = load %struct.pgrp*, %struct.pgrp** %5, align 8
  %17 = call i32 @pg_rele(%struct.pgrp* %16)
  br label %18

18:                                               ; preds = %12, %8, %2
  ret void
}

declare dso_local %struct.pgrp* @pgfind(i32) #1

declare dso_local i32 @pgsignal(%struct.pgrp*, i32, i32) #1

declare dso_local i32 @pg_rele(%struct.pgrp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
